ontol/ontol-compiler/test-cases/error/map/duplicate_map_identifier.on
def t1()
def t2()
def t3()
// note: map has a separate namespace:
map t1(t1(), t2())
map t1( // ERROR duplicate map identifier
    t2(), t3()
)
